--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -2,5 +2,5 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
 #注意：在properties中存在特殊符号不用转义字符
 jdbc.url=jdbc:mysql://rm-wz93n38dxb0zb3yybao.mysql.rds.aliyuncs.com:3306/mybatisplus?useSSL=false&serverTimezone=Asia/Shanghai
-jdbc.username=howard
-jdbc.password=123Howard
+jdbc.username=
+jdbc.password=
